// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RefineColor stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  data-refine-color-harness="true"
>
  <div
    class="mt-2 grid grid-cols-2 gap-2 lg:grid-cols-3"
  >
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-foreground ring-2 ring-foreground/25 ring-offset-2 ring-offset-background"
        style="background-color: rgb(0, 0, 0);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-semibold"
        >
          Black
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          43
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(37, 99, 235);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Blue
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          27
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(220, 38, 38);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Red
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          1
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(22, 163, 74);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Green
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          4
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(255, 255, 255);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          White
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          30
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(161, 98, 7);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Brown
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          15
          )
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`RefineColor stories snapshot > ManyColors story renders and matches snapshot 1`] = `
<div
  data-refine-color-harness="true"
>
  <div
    class="mt-2 grid grid-cols-2 gap-2 lg:grid-cols-3"
  >
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-foreground ring-2 ring-foreground/25 ring-offset-2 ring-offset-background"
        style="background-color: rgb(0, 0, 0);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-semibold"
        >
          Black
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          43
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(37, 99, 235);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Blue
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          27
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(220, 38, 38);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Red
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          1
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(22, 163, 74);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Green
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          4
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(255, 255, 255);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          White
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          30
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(161, 98, 7);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Brown
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          15
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(219, 39, 119);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Pink
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          3
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(147, 51, 234);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Purple
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          0
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(202, 138, 4);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Yellow
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          0
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(234, 88, 12);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Orange
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          0
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(107, 114, 128);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Grey
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          13
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(30, 58, 138);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Navy
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          0
          )
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`RefineColor stories snapshot > NoSelectedColors story renders and matches snapshot 1`] = `
<div
  data-refine-color-harness="true"
>
  <div
    class="mt-2 grid grid-cols-2 gap-2 lg:grid-cols-3"
  >
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(0, 0, 0);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Black
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          43
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(37, 99, 235);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Blue
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          27
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(220, 38, 38);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Red
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          1
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(22, 163, 74);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Green
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          4
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(255, 255, 255);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          White
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          30
          )
        </span>
      </div>
    </button>
    <button
      class="flex w-full min-w-0 flex-col items-center gap-2 rounded-none border-0 bg-transparent p-1 text-center shadow-none whitespace-normal hover:bg-muted/40 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      type="button"
    >
      <div
        class="size-8 shrink-0 rounded-none border border-border"
        style="background-color: rgb(161, 98, 7);"
      />
      <div
        class="flex w-full min-w-0 flex-col items-center gap-0.5 text-center"
      >
        <span
          class="text-pretty text-sm break-words text-foreground font-medium"
        >
          Brown
        </span>
        <span
          class="text-muted-foreground text-xs"
        >
          (
          15
          )
        </span>
      </div>
    </button>
  </div>
</div>
`;
